--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
     "private": true,
     "scripts": {
-        "dev": "vite",
-        "build": "vite build"
+        "dev": "npm run development",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "prod": "npm run production",
+        "production": "mix --production"
     },
     "devDependencies": {
+        "@digitallyhappy/backstrap": "^0.5.1",
+        "animate.css": "^3.7.2",
         "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.7.2",
+        "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
+        "noty": "^3.2.0-beta-deprecated",
         "postcss": "^8.1.14",
-        "vite": "^4.0.0"
+        "sass": "^1.60.0",
+        "sass-loader": "^12.1.0"
     }
 }
